--- a/main.tex
+++ b/main.tex
@@ -21,8 +21,8 @@
 \usepackage{caption}
 %\usepackage[position=t]{subcaption}
 \captionsetup{compatibility=false}
-%\usepackage{subcaption}
-\usepackage[caption=false]{subfig}
+\usepackage{subcaption}
+%\usepackage[caption=false]{subfig}
 
 \usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
@@ -1023,36 +1023,21 @@ Due to lack of tools, we determine cluster quality on a small scale.
 All the experiments in this section are conducted with python 3.8.0.
 In particular we use the agglomerative clustering algorithm, decision trees, and the MinMaxScaler from the sklearn 0.22.1 library.
 
-\eb{Subfig fixen}
 \begin{figure}
- \subfloat[Job-IO-Duration\label{fig:datasets_clustering_results:io_duration}]{
-	\includegraphics[width=0.45\textwidth]{./media/image10.png}
- }
- \subfloat[Job-IO-Metric\label{fig:datasets_clustering_results:io_metric}]{
-	\includegraphics[width=0.45\textwidth]{./media/image12.png}
- }
+	\begin{subfigure}[t]{0.45\textwidth}
+	\includegraphics[width=\textwidth]{./media/image10.png}
+	\caption{Job-IO-Duration}
+	\label{fig:datasets_clustering_results:io_duration}
+ \end{subfigure}
+ \hfill
+ \begin{subfigure}[t]{0.45\textwidth}
+	\includegraphics[width=\textwidth]{./media/image12.png}
+	\caption{Job-IO-Metric}
+	\label{fig:datasets_clustering_results:io_metric}
+ \end{subfigure}
  \caption{The Top 20 largest clusters.}
  \label{fig:datasets_clustering_results}
 \end{figure}
-
-%%=======
-%\begin{figure}
-%\begin{subfigure}[t]{\textwidth}
-%   \includegraphics[width=0.45\textwidth]{./media/image10.png}
-%   \caption{Job-IO-Duration}
-%   \label{fig:datasets_clustering_results:io_duration}
-%  \end{subfigure}
-
-%\begin{subfigure}[t]{\textwidth}
-%   \includegraphics[width=0.45\textwidth]{./media/image12.png}
-%   \caption{Job-IO-Metric}
-%   \label{fig:datasets_clustering_results:io_metric}
-%  \end{subfigure}
-
-%  \caption{The Top 20 largest clusters.}
-%  \label{fig:datasets_clustering_results}
-%%>>>>>>> 69292231ccbd8f4f38b997e748e6c42e872270a5
-%\end{figure}
 
 \subsubsection{Clustering of the Job-IO-Metric and Job-IO-Duration datasets}
 As already mentioned in the related work section, the Job-IO-Metric dataset has 3 features, Job-I/O-Balance, Job-I/O-Utilization, and Job-I/O-Problem-Time.
