--- a/main.tex
+++ b/main.tex
@@ -1272,7 +1272,7 @@ The following observations are characteristic for this algorithm:
 \begingroup
   \centering
   \includegraphics[width=4.61in,height=1.39in]{./media/image20.png}
-	\captionof{table}{Length distribution in the cluster.}
+	\captionof{figure}{Length distribution in the cluster.}
   \label{fig:bin_all:length}
 \endgroup
 %\end{figure}
@@ -1765,7 +1765,7 @@ Information related to the cluster is in \Cref{tab:use_case:hex_native:stats}, \
 \begingroup
   \centering
   \includegraphics[width=4.61in,height=1.39in]{./media/image2.png}
-	\captionof{table}{Figure 19. Length distribution in the cluster.}
+	\captionof{figure}{Figure 19. Length distribution in the cluster.}
   \label{fig:use_case:hex_native:length}
 \endgroup
 %\end{figure}
