--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1215,7 +1215,7 @@ year = {2019}
 }
 
 @article{carns2011understanding-toc,
-  title={Understanding and improving computational science storage access through continuous characterization},
+  title={{Understanding and improving computational science storage access through continuous characterization}},
   author={Carns, Philip and Harms, Kevin and Allcock, William and Bacon, Charles and Lang, Samuel and Latham, Robert and Ross, Robert},
   journal={ACM Transactions on Storage (TOS)},
   volume={7},
@@ -1228,7 +1228,7 @@ year = {2019}
 @inproceedings{hpcdarshan,
 	author = {Philip Carns},
 	title = {Darshan},
-	booktitle = {High performance parallel I/O},
+	booktitle = {{High performance parallel I/O}},
 	series = {Computational Science Series},
 	year = {2015},
 	pages = {309-315},
@@ -1256,7 +1256,7 @@ year = {2019}
                Harvey Richardson and
                Adrian Tate and
                Martin Lafferty},
-  title     = {LASSi: Metric based {I/O} analytics for {HPC}},
+  title     = {{LASSi: Metric based {I/O} analytics for {HPC}}},
   journal   = {CoRR},
   volume    = {abs/1906.03884},
   year      = {2019},
@@ -1271,8 +1271,8 @@ year = {2019}
 
 @INPROCEEDINGS{6651106,
 	author={J. {Dayal} and J. {Cao} and G. {Eisenhauer} and K. {Schwan} and M. {Wolf} and F. {Zheng} and H. {Abbasi} and S. {Klasky} and N. {Podhorszki} and J. {Lofstead}},
-	booktitle={2013 IEEE International Symposium on Parallel Distributed Processing, Workshops and Phd Forum},
-	title={I/O Containers: Managing the Data Analytics and Visualization Pipelines of High End Codes},
+	booktitle={{2013 IEEE International Symposium on Parallel Distributed Processing, Workshops and Phd Forum}},
+	title={{I/O Containers: Managing the Data Analytics and Visualization Pipelines of High End Codes}},
 	year={2013},
 	volume={},
 	number={},
@@ -1284,8 +1284,8 @@ year = {2019}
 
 @inproceedings{Xie:2017:POP:3078597.3078614,
 	author = {Xie, Bing and Huang, Yezhou and Chase, Jeffrey S. and Choi, Jong Youl and Klasky, Scott and Lofstead, Jay and Oral, Sarp},
-	title = {Predicting Output Performance of a Petascale Supercomputer},
-	booktitle = {Proceedings of the 26th International Symposium on High-Performance Parallel and Distributed Computing},
+	title = {{Predicting Output Performance of a Petascale Supercomputer}},
+	booktitle = {{Proceedings of the 26th International Symposium on High-Performance Parallel and Distributed Computing}},
 	series = {HPDC '17},
 	year = {2017},
 	isbn = {978-1-4503-4699-3},
@@ -1301,7 +1301,7 @@ year = {2019}
 }
 
 @inproceedings{Gienger2017TowardsSI,
-  title={Towards Seamless Integration of Data Analytics into Existing HPC Infrastructures},
+  title={{Towards Seamless Integration of Data Analytics into Existing HPC Infrastructures}},
   author={Michael Gienger},
   year={2017}
 }
@@ -1313,8 +1313,8 @@ year = {2019}
 		and Weiland, Mich{\`e}le
 		and Shalf, John
 		and Alam, Sadaf",
-	title="Benefit of DDN's IME-FUSE for I/O Intensive HPC Applications",
-	booktitle="High Performance Computing",
+	title={{Benefit of DDN's IME-FUSE for I/O Intensive HPC Applications}},
+	booktitle={{High Performance Computing}},
 	year="2018",
 	publisher="Springer International Publishing",
 	address="Cham",
@@ -1325,7 +1325,7 @@ year = {2019}
 
 @INPROCEEDINGS{7004215,
 	author={T. {Wang} and S. {Oral} and Y. {Wang} and B. {Settlemyer} and S. {Atchley} and W. {Yu}},
-	booktitle={2014 IEEE International Conference on Big Data (Big Data)}, 
+	booktitle={{2014 IEEE International Conference on Big Data (Big Data)}}, 
 	title={BurstMem: A high-performance burst buffer system for scientific applications}, 
 	year={2014},
 	volume={},
@@ -1362,7 +1362,7 @@ year = {2019}
 
 @misc{sivalingam2019lassi,
     title={LASSi: Metric based I/O analytics for HPC},
-    author={Karthee Sivalingam and Harvey Richardson and Adrian Tate and Martin Lafferty},
+    author={{Karthee Sivalingam and Harvey Richardson and Adrian Tate and Martin Lafferty}},
     year={2019},
     eprint={1906.03884},
     archivePrefix={arXiv},
@@ -1371,8 +1371,8 @@ year = {2019}
 
 @INPROCEEDINGS{7830462,
 	author={S. {Snyder} and P. {Carns} and K. {Harms} and R. {Ross} and G. K. {Lockwood} and N. J. {Wright}},
-	booktitle={2016 5th Workshop on Extreme-Scale Programming Tools (ESPT)},
-	title={Modular HPC I/O Characterization with Darshan},
+	booktitle={{2016 5th Workshop on Extreme-Scale Programming Tools (ESPT)}},
+	title={{Modular HPC I/O Characterization with Darshan}},
 	year={2016},
 	volume={},
 	number={},
@@ -1384,7 +1384,7 @@ year = {2019}
 }
 
 @article{LIANG201925,
-	title = "CARS: A contention-aware scheduler for efficient resource management of HPC storage systems",
+	title = {{CARS: A contention-aware scheduler for efficient resource management of HPC storage systems}},
 	journal = "Parallel Computing",
 	volume = "87",
 	pages = "25 - 34",
@@ -1402,14 +1402,14 @@ year = {2019}
 	year = {2014},
 	month = {09},
 	pages = {9-17},
-	title = {Flux: A Next-Generation Resource Management Framework for Large HPC Centers},
+	title = {{Flux: A Next-Generation Resource Management Framework for Large HPC Centers}},
 	doi = {10.1109/ICPPW.2014.15}
 }
 
 @INPROCEEDINGS{7103433,
 	author={D. H. {Ahn} and J. {Garlick} and M. {Grondona} and D. {Lipari} and B. {Springmeyer} and M. {Schulz}},
-	booktitle={2014 43rd International Conference on Parallel Processing Workshops}, 
-	title={Flux: A Next-Generation Resource Management Framework for Large HPC Centers}, 
+	booktitle={{2014 43rd International Conference on Parallel Processing Workshops}}, 
+	title={{Flux: A Next-Generation Resource Management Framework for Large HPC Centers}}, 
 	year={2014},
 	volume={},
 	number={},
@@ -1424,7 +1424,7 @@ year = {2019}
 		and Weiland, Mich{\`e}le
 		and Shalf, John
 		and Alam, Sadaf",
-	title="Understanding Metadata Latency with MDWorkbench",
+	title={{Understanding Metadata Latency with MDWorkbench}},
 	booktitle="High Performance Computing",
 	year="2018",
 	publisher="Springer International Publishing",
@@ -1439,8 +1439,8 @@ Betke, E., Kunkel. J.: Semi-automatic Assessment of I/O Behavior by Inspecting t
 
 @INPROCEEDINGS{iocats2020,
 	author={Eugen Betke, Julian Kunkel},
-	booktitle={2014 43rd International Conference on Parallel Processing Workshops}, 
-	title={Semi-automatic Assessment of I/O Behavior by Inspecting the Individual Client-Node Timelines — An Explorative Study on $10^6$ Jobs}, 
+	booktitle={{2014 43rd International Conference on Parallel Processing Workshops}}, 
+	title={{Semi-automatic Assessment of I/O Behavior by Inspecting the Individual Client-Node Timelines — An Explorative Study on $10^6$ Jobs}}, 
 	conference= {ISC'20},
 	organization= {ISC Events},
 	year=2020,
